--- a/taotao-cloud-bigdata/taotao-cloud-hudi/build.gradle
+++ b/taotao-cloud-bigdata/taotao-cloud-hudi/build.gradle
@@ -3,6 +3,8 @@ apply plugin: "scala"
 //import com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer
 
 repositories {
+    mavenLocal()
+    mavenCentral()
     maven {
         allowInsecureProtocol = true
         url = 'https://build.shibboleth.net/nexus/content/groups/public'
@@ -33,7 +35,7 @@ dependencies {
     implementation("org.apache.hudi:hudi-flink-client:1.1.1")
     implementation("org.apache.hudi:hudi-flink1.20-bundle:1.1.1")
     implementation("org.apache.hudi:hudi-flink1.20.x:1.1.1")
-    implementation("org.apache.hudi:hudi-spark4.0.x_2.12:1.1.1")
+    implementation("org.apache.hudi:hudi-spark4.0.x_2.13:1.1.1")
     implementation("org.apache.hudi:hudi-gcp-bundle:1.1.1")
     //implementation("org.apache.hudi:hudi-cli-bundle_2.13:1.1.1")
     implementation("org.apache.hudi:hudi-datahub-sync-bundle:1.1.1")
