--- a/taotao-cloud-microservice/taotao-cloud-ai/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-ai/build.gradle
@@ -54,7 +54,7 @@ repositories {
 
 dependencies {
     implementation platform("org.springframework.ai:spring-ai-bom:2.0.0-M1")
-    implementation platform("com.alibaba.cloud.ai:spring-ai-alibaba-bom:1.1.0.0-RC2")
+    implementation platform("com.alibaba.cloud.ai:spring-ai-alibaba-bom:1.1.0.0")
 
     //cloud
     implementation "io.github.shuigedeng:taotao-cloud-starter-stream"
