--- a/taotao-cloud-bigdata/taotao-cloud-doris/build.gradle
+++ b/taotao-cloud-bigdata/taotao-cloud-doris/build.gradle
@@ -3,3 +3,15 @@ dependencies {
 
     implementation 'com.mysql:mysql-connector-j:9.5.0'
 }
+
+configurations {
+    configureEach {
+        resolutionStrategy.cacheChangingModulesFor 0, "seconds"
+        resolutionStrategy.cacheDynamicVersionsFor 0, "seconds"
+
+        resolutionStrategy {
+            force 'org.glassfish:javax.el:3.0.0'
+            force 'org.glassfish.jaxb:jaxb-runtime:4.0.6'
+        }
+    }
+}
